Fixed remote implementation

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </footer>
 
     <!-- Load relevant JavaScripts -->
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="bbcspotilist.alpha.js"></script>
   </body>
 
