Improved GUI to accept more URLs and perform filtering. Updated README.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           BBC Sounds URL:
           <input type='text' id='urlInput' placeholder="https://www.bbc.co.uk/sounds/play/m000hvxg" defaultValue="https://www.bbc.co.uk/sounds/play/m000hvxg">
         </label>
-        <button id='urlSubmit' class="button">Go!</button>
+        <button id='urlSubmit' class="button" disabled>Go!</button>
       </div>
       <textarea name="outputBox" id="outputBox" rows="5" placeholder="RESULTS:" readonly></textarea>
     </main>
