Removed references to BBC so as not to appear to be affiliated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Description" content="Create a spotify playlist from a BBC Sounds episode.">
 
     <!-- Browser parameters -->
-    <title>BBC Spotilist</title>
+    <title>Spotilist</title>
     <link rel="icon" type="image/png" href="resources/favicon.png" />
 
     <!-- Stylesheets -->
@@ -18,8 +18,8 @@
   <body>
 
     <img src="/resources/favicon.png"
-      alt="BBC Spotilist logo"</img>
-    <h1>BBC Spotilist</h1>
+      alt="Spotilist logo"</img>
+    <h1>Spotilist</h1>
     <p id="subtitle">Create a spotify playlist from a BBC Sounds episode.</p>
 
     <main>
@@ -49,7 +49,7 @@
 
     <footer>
       <p>
-        A <a href=https://github.com/aricooperdavis/BBC-Spotilist>free
+        A <a href=https://github.com/aricooperdavis/Spotilist>free
         and open source</a> project by <a href=https://www.cooper-davis.net>
         Ari Cooper-Davis</a>, using <a
         href=https://github.com/Rob--W/cors-anywhere/>CORS Anywhere</a> and <a
@@ -59,7 +59,7 @@
 
     <!-- Load relevant JavaScripts -->
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script type="text/javascript" src="bbcspotilist.alpha.js"></script>
+    <script type="text/javascript" src="spotilist.alpha.js"></script>
   </body>
 
 </html>
