--- a/index.html
+++ b/index.html
@@ -17,25 +17,22 @@
 
   <body>
 
-    <img src="/resources/favicon.png"
-      alt="Spotilist logo"</img>
-    <h1>Spotilist</h1>
+    <a href="https://spotilist.cooper-davis.net" id="header_link"><img src="/resources/favicon.png" alt="Spotilist logo"</img>
+    <h1>Spotilist</h1></a>
     <p id="subtitle">Create a spotify playlist from a BBC Sounds episode.</p>
 
     <main>
-      <p id="intro">
-        This site makes a spotify playlist containing all the tracks in a given
-        BBC Sounds episode. All you need to do is:
-        <ul id="instructions">
-          <li><b>Copy the url</b> of the BBC Sounds episode you're interested in.</li>
-          <li><b>Paste the url</b> into the box below.</li>
-          <li><b>Click go</b> and let the tool do its thing. You'll need to authenticate your spotify account so that it can make you a playlist!</li>
-        </ul>
-        All of this is done in your browser using JavaScript, which maximises
-        your privacy and security. As such you'll need <a
-        href=https://updatemybrowser.org/>a modern browser</a> to use this
-        tool. Please note that this tool is not affiliated with either the BBC or Spotify.
-      </p>
+      <div id="foldable">
+        <p id="intro">
+          This tool takes a BBC Sounds episode, extracts the songs, and puts them in a new Spotify playlist for you. It's super simple:
+          <ul id="instructions">
+            <li><b>Enter the url</b> of the BBC Sounds episode you want into the box below, which will go green if it's a valid URL.</li>
+            <li><b>Click go</b> and authenticate your Spotify account. You'll be redirected to your new playlist once it's ready.</li>
+            <li><b>Wait for a few seconds</b> to be redirected to your new playlist.</li>
+          </ul>
+          <i>Sometimes the tool struggles to find the BBC Sounds Episode that you want. If this happens try clicking "Go!" again.</i>
+        </p>
+      </div>
       <br>
       <div id="buttons">
         <label class="button">
