Minor style changes and code organisation.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <body>
 
-    <a href="https://spotilist.cooper-davis.net" id="header_link"><img src="/resources/favicon.png" alt="Spotilist logo"</img>
-    <h1>Spotilist</h1></a>
+    <a href="https://spotilist.cooper-davis.net"><img src="/resources/favicon.png" alt="Spotilist logo"></a>
+    <h1><a href="https://spotilist.cooper-davis.net" id="header_link">Spotilist</a></h1>
     <p id="subtitle">Create a spotify playlist from a BBC Sounds episode.</p>
 
     <main>
