--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           This tool takes a BBC Sounds episode, extracts the songs, and puts them in a new Spotify playlist for you. It's super simple:
           <ul id="instructions">
             <li><b>Enter the url</b> of the BBC Sounds episode you want into the box below, which will go green if it's a valid URL.</li>
-            <li><b>Click go</b> and authenticate your Spotify account. You'll be redirected to your new playlist once it's ready.</li>
+            <li><b>Click go</b> and authenticate your Spotify account.</li>
             <li><b>Wait for a few seconds</b> to be redirected to your new playlist.</li>
           </ul>
           <i>Sometimes the tool struggles to find the BBC Sounds Episode that you want. If this happens try clicking "Go!" again.</i>
