--- a/index.html
+++ b/index.html
@@ -17,23 +17,15 @@
 
   <body>
 
-    <a href="https://spotilist.cooper-davis.net"><img src="/resources/favicon.png" alt="Spotilist logo"></a>
-    <h1><a href="https://spotilist.cooper-davis.net" id="header_link">Spotilist</a></h1>
-    <p id="subtitle">Create a spotify playlist from a BBC Sounds episode.</p>
+    <div id="title">
+      <img src="/resources/favicon.png" alt="Spotilist logo">
+      <h1><a href="https://spotilist.cooper-davis.net" id="header_link">Spotilist</a></h1>
+      <p id="subtitle">Create a spotify playlist from a BBC Sounds episode.</p>
+    </div>
 
     <main>
-      <div id="foldable">
-        <p id="intro">
-          This tool takes a BBC Sounds episode, extracts the songs, and puts them in a new Spotify playlist for you. It's super simple:
-          <ul id="instructions">
-            <li><b>Enter the url</b> of the BBC Sounds episode you want into the box below, which will go green if it's a valid URL.</li>
-            <li><b>Click go</b> and authenticate your Spotify account.</li>
-            <li><b>Wait for a few seconds</b> to be redirected to your new playlist.</li>
-          </ul>
-          <i>Sometimes the tool struggles to find the BBC Sounds Episode that you want. If this happens try clicking "Go!" again.</i>
-        </p>
-      </div>
-      <br>
+        <p id="intro">This tool takes a BBC Sounds episode, extracts the songs, and puts them in a new Spotify playlist for you.</p>
+
       <div id="buttons">
         <label class="button">
           BBC Sounds URL:
@@ -41,7 +33,19 @@
         </label>
         <button id='urlSubmit' class="button" disabled>Go!</button>
       </div>
+
+      <details>
+        <summary><u>Instructions</u></summary>
+        <ol>
+          <li><b>Enter the url</b> of the BBC Sounds episode you want into the box below, which will go green if it's a valid URL.</li>
+          <li><b>Click go</b> and authenticate your Spotify account.</li>
+          <li><b>Wait for a few seconds</b> to be redirected to your new playlist.</li>
+        </ol>
+        <i>Sometimes the tool struggles to find the BBC Sounds Episode that you want. If this happens try clicking "Go!" again.<br><br></i>
+      </details>
+
       <textarea name="outputBox" id="outputBox" rows="5" placeholder="RESULTS:" readonly></textarea>
+
     </main>
 
     <footer>
