Change reference to proxy in footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         A <a href=https://github.com/aricooperdavis/Spotilist>free
         and open source</a> project by <a href=https://www.cooper-davis.net>
         Ari Cooper-Davis</a>, using <a
-        href=https://github.com/Rob--W/cors-anywhere/>CORS Anywhere</a> and <a
+        href=https://github.com/gnuns/allOrigins>All Origins</a> and <a
         href=https://github.com/jquery/jquery>jQuery</a>.
       </p>
     </footer>
