Verify jQuery and failover locally

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     </footer>
 
     <!-- Load relevant JavaScripts -->
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script type="text/javascript" src="spotilist.alpha.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/spotilist.js"></script>
   </body>
 
 </html>
