--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="resources/favicon.png" />
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
