Set img width and height to eliminate CLS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Browser parameters -->
     <title>Spotilist</title>
-    <link rel="icon" type="image/png" href="resources/favicon.png" />
+    <link rel="icon" type="image/png" href="resources/favicon.png"/>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css">
@@ -18,7 +18,7 @@
   <body>
 
     <div id="title">
-      <img id="logo" src="/resources/favicon.png" alt="Spotilist logo">
+      <img id="logo" src="/resources/favicon.png" alt="Spotilist logo" width="75" height="75">
       <h1><a href="https://spotilist.cooper-davis.net" id="header_link">Spotilist</a></h1>
       <p id="subtitle">Create a spotify playlist from a BBC Sounds episode.</p>
     </div>
