Resize favicon to save data

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Browser parameters -->
     <title>Spotilist</title>
-    <link rel="icon" type="image/png" href="resources/favicon.png"/>
+    <link rel="icon" type="image/png" href="resources/favicon.png">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css">
