Removed JQuery dependency

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             <li><b>Click go</b> and authenticate your Spotify account.</li>
             <li><b>Wait for a few seconds</b> to be redirected to your new playlist.</li>
           </ol>
-          <i>Sometimes the tool struggles to find the BBC Sounds Episode that you want. If this happens try clicking "Go!" again.</i>
-
+          
           <p><b>More options:</b></p>
 
           Playlist title: <input type="text" id="playlistTitleInput" placeholder="Default"><br><br>
@@ -64,13 +63,11 @@
         A <a href=https://github.com/aricooperdavis/Spotilist>free
         and open source</a> project by <a href=https://www.cooper-davis.net>
         Ari Cooper-Davis</a>, using <a
-        href=https://github.com/gnuns/allOrigins>All Origins</a> and <a
-        href=https://github.com/jquery/jquery>jQuery</a>.
+        href=https://github.com/gnuns/allOrigins>All Origins</a>.
       </p>
     </footer>
 
     <!-- Load relevant JavaScripts -->
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/spotilist.js"></script>
   </body>
 
