Disable submit button on page load

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <b>BBC Sounds URL: </b>
           <input type="text" id="urlInput" class="invalid" placeholder="https://www.bbc.co.uk/sounds/play/m000hvxg">
         </label>
-        <button id='urlSubmit' class="button" disabled>Go!</button>
+        <button id='urlSubmit' class="invalid" disabled>Go!</button>
       </div>
 
       <details id="details">
